--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,3 +4,21 @@ img{
     width: 100%;
     height: auto;
 }
+
+.season-banner{
+    height: 300px;
+    background-color: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.season-card{
+    height: 150px;
+    background-color: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+}
