--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,3 +4,14 @@ img{
     width: 100%;
     height: auto;
 }
+
+footer{
+    background-image: url('https://placehold.co/1240x400'); 
+    background-size: cover; 
+    background-position: center; 
+    height: 300px;
+}
+
+.serviet-tekst{
+    margin: 20px 0 20px 70px ;
+}
