--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,15 +25,13 @@ footer{
 }
 
 .season-card{
-    height: 150px;
     background-color: cover;
     background-position: center;
-    display: flex;
-    align-items: center;
-    justify-content: center; 
+    height: 150px;
 }
 
 .season-row{
     display: flex;
-    gap: 20px;
+    align-items: center;
+    justify-content: space-between;
 }
