--- a/stylesheet.css
+++ b/stylesheet.css
@@ -41,3 +41,8 @@ footer{
     justify-content: space-between;
     gap: 5%;
 }
+
+
+@media screen and (max-width: 768px) {
+  /* Din styling her gælder kun på mobil */
+}
