--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,7 @@ img{
     height: auto;
 }
 
+/*----------------------------FOOTER----------------------------*/
 footer{
     background-image: url('https://placehold.co/1240x400'); 
     background-size: cover; 
@@ -15,6 +16,8 @@ footer{
 .serviet-tekst{
     margin: 20px 0 20px 70px ;
 }
+
+/*----------------------------OPSKRIFTER PÅ FORSIDEN----------------------------*/
 .season-banner{
     height: 300px;
     background-color: cover;
@@ -42,7 +45,47 @@ footer{
     gap: 5%;
 }
 
+/*----------------------------COLLAGE E-MAGASIN TILMELDING----------------------------*/
+.collage{
+    position: relative;
+}
+
+.galleri{
+    position: absolute;
+}
+
+.billede1{
+    width: 20%;
+    margin-left: 80%;
+    margin-top: 10%;
+}
+
+.billede2{
+    width: 5%;
+}
+
+.billede3{
+    width: 30%;
+}
+
+.billede4{
+    width: 25%;
+}
+
+.billede5{
+    width: 6%;
+}
+
+.billede6{
+    width: 20%;
+}
+
+
+
+
+/*----------------------------MOBIL-VERISON----------------------------*/
 
 @media screen and (max-width: 768px) {
-  /* Din styling her gælder kun på mobil */
+  /* Stylingingen gælder kun på mobil */
+
 }
