--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,43 +46,42 @@ footer{
 }
 
 /*----------------------------COLLAGE E-MAGASIN TILMELDING----------------------------*/
-.collage{
+.collage-container{
     position: relative;
+    width: 100%;
+    height: 1050px;
+    box-sizing: border-box;
+    background: green;
 }
 
-.galleri{
+/*Alle billeder i collagen*/
+.billede{
     position: absolute;
+    height: auto;
+    object-fit: cover;
 }
 
-.billede1{
-    width: 20%;
-    margin-left: 80%;
-    margin-top: 10%;
-}
+.billede1{ top: 5%; left: 10%; width: 30%;}
+.billede2{ top: 35%; left: 25%; width: 25%;}
+.billede3{ top: 65%; left: 20%; width: 10%;}
+.billede4{ top: 15%; left: 60%; width:10%}
+.billede5{ top: 60%; left: 55%; width: 15%;}
+.billede6{ top: 70%; left: 70%; width: 20%;}
+.billede7{ top: 5%; left: 70%; width: 20%;}
 
-.billede2{
-    width: 5%;
-}
-
-.billede3{
+.tilmelding-boks{
+    position: absolute;
+    top: 30%;
+    right: 15%;
     width: 30%;
-}
-
-.billede4{
-    width: 25%;
-}
-
-.billede5{
-    width: 6%;
-}
-
-.billede6{
-    width: 20%;
+    background: pink;
+    box-sizing: border-box;
 }
 
 
-
-
+.bord-container img{
+    width: 70%;
+}
 /*----------------------------MOBIL-VERISON----------------------------*/
 
 @media screen and (max-width: 768px) {
