--- a/stylesheet.css
+++ b/stylesheet.css
@@ -81,6 +81,13 @@ footer{
 .bord-container img{
     width: 70%;
 }
+
+/*----------------------------OM OS----------------------------*/
+
+
+
+
+
 /*----------------------------MOBIL-VERISON----------------------------*/
 
 @media screen and (max-width: 768px) {
