--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,7 @@ footer{
 .collage-container{
     position: relative;
     width: 100%;
-    height: 1050px;
+    height: 950px;
     box-sizing: border-box;
 }
 
@@ -60,26 +60,29 @@ footer{
     object-fit: cover;
 }
 
-.billede1{ top: 5%; left: 10%; width: 30%;}
-.billede2{ top: 35%; left: 25%; width: 25%;}
-.billede3{ top: 65%; left: 20%; width: 10%;}
-.billede4{ top: 15%; left: 60%; width:10%}
-.billede5{ top: 60%; left: 55%; width: 15%;}
-.billede6{ top: 70%; left: 70%; width: 20%;}
-.billede7{ top: 5%; left: 70%; width: 20%;}
+.kurv{ top: 8%; left: 10%; width: 27%;}
+.foraarsbord{ top: 43%; left: 20%; width: 25%;}
+.asparges{ top: 73%; left: 20%; width: 6%; transform: rotate(-20deg);}
+.tomat{ top: 22%; left: 62%; width:10%; z-index: 2;}
+.foraarsmad{ top: 64%; left: 64%; width: 15%; z-index: 2;}
+.driver{ top: 43%; left: 73%; width: 20%;}
+.vin{ top: 5%; left: 65%; width: 25%;}
 
 .tilmelding-boks{
     position: absolute;
-    top: 30%;
-    right: 15%;
+    top: 32%;
+    right: 25%;
     width: 30%;
-    background: pink;
     box-sizing: border-box;
 }
 
+.bord-container {
+    background-color: lightblue;
+}
 
 .bord-container img{
     width: 70%;
+    
 }
 
 /*----------------------------OM OS----------------------------*/
@@ -171,21 +174,88 @@ footer{
     font-style: italic;
   }
 
- 
 
 
+  /*----------------------------MELLEM DESKTOP (TIL COLLAGE)----------------------------*/
 
+@media screen and (max-width: 1024px) {
+    /* Styling på collage når skærmen bliver mindre  */
 
+    .collage-container{
+        height: 750px;
+    }
+  
+    .kurv{ top: 8%; left: 10%; width: 27%;}
+    .foraarsbord{ top: 42%; left: 17%; width: 25%;}
+    .asparges{ top: 71%; left: 17%; width: 6%; transform: rotate(-20deg);}
+    .tomat{ top: 18%; left: 62%; width:10%; z-index: 2;}
+    .foraarsmad{ top: 75%; left: 64%; width: 15%; z-index: 2;}
+    .driver{ top: 55%; left: 74%; width: 20%;}
+    .vin{ top: 2%; left: 65%; width: 25%;}
+    
+    .tilmelding-boks{
+        position: absolute;
+        top: 29%;
+        right: 17%;
+        width: 40%;
+        box-sizing: border-box;
+    }
+  }
 
-
-/*----------------------------MOBIL-VERISON----------------------------*/
+/*----------------------------TABLET-VERISON----------------------------*/
 
 @media screen and (max-width: 768px) {
-  /* Stylingen gælder kun på mobil */
+    /* Styling på collage når det er en tablet */
 
-  .footer{
-    display: block;
-  }
-   
+    .collage-container{
+        height: 550px;
+    }
   
-}
+    .kurv{ top: 8%; left: 10%; width: 27%;}
+    .foraarsbord{top: 44%; left: 10%; width: 25%;}
+    .asparges{ top: 65%; left: 80%; width: 6%; transform: rotate(20deg);}
+    .tomat{ top: 18%; left: 62%; width:10%; z-index: 2;}
+    .foraarsmad{display: none;}
+    .driver{display: none;}
+    .vin{left: 65%; width: 25%;}
+    
+    .tilmelding-boks{
+        position: absolute;
+        top: 30%;
+        right: 17%;
+        width: 45%;
+        box-sizing: border-box;
+    }
+  }
+
+  /*----------------------------MOBIL-VERISON----------------------------*/
+
+@media screen and (max-width: 430px) {
+    /* Stylingen gælder kun på mobil */
+  
+    .footer{
+      display: block;
+    }
+
+    .collage-container{
+        height: 850px;
+    }
+  
+    .kurv{ top: 0%; left: 20%; width: 35%;}
+    .foraarsbord{top: 75%; left: 10%; width: 37%; z-index: 4;}
+    .asparges{display: none;}
+    .tomat{ top: 8%; left: 53%; width:17%; z-index: 2;}
+    .foraarsmad{ top: 70%; left: 37%; width: 40%; display: block;}
+    .driver{display: none;}
+    .vin{top: 12%; left: 45%; width: 35%;}
+    
+    .tilmelding-boks{
+        position: static;
+        width: 90%;
+        margin-top: 60%;
+
+        box-sizing: border-box;
+    }
+  
+  }
+
