--- a/stylesheet.css
+++ b/stylesheet.css
@@ -10,7 +10,11 @@ footer{
     background-image: url('https://placehold.co/1240x400'); 
     background-size: cover; 
     background-position: center; 
-    height: 300px;
+    height: 400px;
+}
+
+.kontakt{
+    height: 400px;
 }
 
 .serviet-tekst{
@@ -212,9 +216,6 @@ footer{
 
 @media screen and (max-width: 430px) {
     /* Stylingen gælder kun på mobil */
-    .footer{
-      display: block;
-    }
 
     /*Styling for collage*/
     .collage-container{
@@ -245,6 +246,10 @@ footer{
             right: 200px;
         }
   
+        /*----------------------------FOOTER----------------------------*/
+    footer{
+        background-image: url('https://placehold.co/100x100'); 
+    }
 
   }
 
