--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,14 +59,10 @@ img{
 
 /*----------------------------FOOTER----------------------------*/
 footer{
-    background-image: url('https://placehold.co/1240x400'); 
+    background-image: url('img/ternstor.png'); 
     background-size: cover; 
     background-position: center; 
     height: 400px;
-}
-
-.serviet-tekst{
-    margin: 20px 0 20px 70px ;
 }
 
 .kontakt-boks{
@@ -346,7 +342,8 @@ footer{
   
 /*----------------------------FOOTER----------------------------*/
     footer{
-        background-image: url('https://placehold.co/100x100'); 
+        background-image: url('img/tern.png'); 
+        height: 570px;
     }
 
     .serviet-tekst{
@@ -356,6 +353,8 @@ footer{
     .kontakt-boks{
         width: 200px;
     }
+
+   
 
     /*--------------------Tilpasninger----------------------*/
 
