--- a/stylesheet.css
+++ b/stylesheet.css
@@ -135,9 +135,8 @@ footer{
 }
 
 
-.bord-container img{
-    width: 70%;
-    
+.faelles-bord img{
+    width: 50%;
 }
 
 /*----------------------------STYLING TIL ALLE SIDER M. OPSKRIFTER----------------------------*/
