--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,6 +8,7 @@
 /* -----------------------Farver og Fonte ---------------------- */
 body{
     background-color: var(--primær-orange);
+    padding-top: 60px;
 }
 
 .orange{
@@ -60,6 +61,10 @@ img{
 .logo img {
     width: 80px; /* eller 150px, 200px, alt efter behov */
     height: auto; /* sørger for at billedet ikke bliver forvrænget */
+  }
+
+i{
+    color: #093A9D;
   }
   
 
