--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,10 +25,6 @@ body{
     color: var(--sekundær-blå);
 }
 
-.dropdown-menu{
-    background-color: var(--sekundær-orange) !important;
-}
-
 h1, h2, h3{
     color: var(--primær-blå);
     font-weight: bold;
@@ -42,6 +38,50 @@ h1{
 p, h2, h3, a{
     font-family: 'Poppins', sans-serif;
 }
+
+/*--------------------Dropdown----------------------*/
+/* Dropdown Button (linken 'Opskrifter') */
+.dropbtn {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+/* Dropdown container */
+.vores-dropdown {
+  position: relative;
+}
+
+/* Dropdown indhold (skjult til at starte med) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+  z-index: 1000;
+  top: 100%;
+  left: 0;
+}
+
+/* Links i dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  display: block;
+  text-decoration: none;
+}
+
+/* Hover-effekter */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.vores-dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
 
 /*-------------------- Tilpasninger----------------------*/
 
