--- a/stylesheet.css
+++ b/stylesheet.css
@@ -219,7 +219,8 @@ footer{
   position: absolute;
   top: 148%;
   right: 15%;
-  width: 18%;
+  min-width: 200px;
+  max-width: 400px;
   background: #5671A7;
   color: #FBEBDE;
   padding: 1.5rem;
