--- a/stylesheet.css
+++ b/stylesheet.css
@@ -219,12 +219,7 @@ footer{
   position: absolute;
   top: 148%;
   right: 15%;
-<<<<<<< HEAD
-  min-width: 200px;
-  max-width: 300px;
-=======
   width: 18%;
->>>>>>> 4f2d4c237fa56d2c9439bb9df8b230ca123f9f54
   background: #5671A7;
   color: #FBEBDE;
   padding: 1.5rem;
@@ -260,9 +255,6 @@ footer{
 button {
   padding: 10px;
   cursor: pointer;
-  color: var(--primær-orange);
-  background-color: var(--primær-blå);
-  width: 200px;
 }
 
 .comment-list {
@@ -270,7 +262,7 @@ button {
   padding: 10px;
   max-height: 300px;
   overflow-y: scroll;
-  background-color: var(--sekundær-orange);
+  background-color: #f9f9f9;
 }
 
 .comment {
@@ -320,25 +312,23 @@ button {
 .logo-hero{ top: 22%; left: 41%;}
 
 .logo-hero img {
-    width: 80px; /* eller 150px, 200px, alt efter behov */
-    height: auto; /* sørger for at billedet ikke bliver forvrænget */
+    width: 80px; 
+    height: auto; 
   }
-
-.kontakt-tekst h2, p, a{
-    font-family: 'Fuzzy Bubbles';
-}
-
-.kontakt-tekst h2{
-    font-size: 40px ;
-}
-
-.kontakt-tekst p{
-    font-size: 20px;
-}
+  .kontakt-tekst h2,
+  .kontakt-tekst a,
+  .kontakt-tekst p{
+      font-family: 'Fuzzy Bubbles';
+  }
   
-
-
-
+  .kontakt-tekst h2{
+      font-size: 40px ;
+  }
+  
+  .kontakt-tekst p{
+      font-size: 20px;
+  }
+  
 
 
 /*-------------------------- Fællesskål siden ------------------------------------*/
