--- a/stylesheet.css
+++ b/stylesheet.css
@@ -197,26 +197,22 @@ footer{
 /*----------------------------STYLING TIL ALLE SIDER M. OPSKRIFTER----------------------------*/
 .collage-opskrift-container{
   position: relative;
-  height: 830px;
+  height: 750px;
 }
 
 
-.pesto{ top: 35%; left: 10%; width: 50%; transform: rotate(-5deg);}
-.pastaret { top: 42%; left: 52%; width: 40%; }
-.bord { top: 70%; left: 48%; width: 40%; transform: rotate(10deg);}
+.opskrift-billede1{ top: 35%; left: 10%; width: 50%; transform: rotate(-5deg);}
+.opskrift-billede2{ top: 55%; left: 52%; width: 40%; }
+.opskrift-billede3{ top: 75%; left: 20%; width: 50%; transform: rotate(10deg);}
 
 
-.ingredienser-boks{
-  position: absolute;
-  right: 0%;
-  width: 45%;
-}
 
 .tip-boks{
   position: absolute;
   top: 148%;
   right: 15%;
-  width: 18%;
+  min-width: 100px;
+  max-width: 300px;
   background: #5671A7;
   color: #FBEBDE;
   padding: 1.5rem;
@@ -372,6 +368,11 @@ button {
         width: 40%;
         box-sizing: border-box;
     }
+  
+    /*------------Styling til opskrifter----------*/
+    .opskrift-billede1{ top: 33%; left: 8%; width: 60%; transform: rotate(-5deg);}
+    .opskrift-billede2{ top: 55%; left: 43%; width: 50%; }
+    .opskrift-billede3{ top: 73%; left: 11%; width: 60%; transform: rotate(10deg);}
 
 
 
@@ -418,6 +419,19 @@ button {
         bottom: 300px; 
         right: 167px;
     }
+
+
+  
+/*------------Styling til opskrifter----------*/
+  .opskrift-billede1{ top: 2%; left: 10%; width: 60%; transform: rotate(-5deg);}
+  .opskrift-billede2{ top: 12%; left: 52%; width: 50%; }
+  .opskrift-billede3{ top: 3%; left: 90%; width: 60%; transform: rotate(10deg);}
+
+
+  .fremgangsmaade{
+    top: 60%;
+  }
+
 
 
 
