--- a/stylesheet.css
+++ b/stylesheet.css
@@ -220,10 +220,14 @@ footer{
 /*----------------------------STYLING TIL FÆLLESSKÅL----------------------------*/
     .minicollage{
         position: relative;
+        height: 300px;
+        box-sizing: border-box;
+        
     }
 
-    .laerke-pasta{top: -10%; left: -10%; width: 70%; z-index: 2}
-    .amalie-peber{top: -120%; left: 30%; width: 70%;}
+    .laerke-pasta{top: -20%; left: 5%; width: 30%; z-index: 2}
+    .amalie-peber{top: -140%; left: 22%; width: 25%;}
+
 
 
 
@@ -406,8 +410,8 @@ button {
     .opskrift-billede3{ top: 73%; left: 11%; width: 60%; transform: rotate(10deg);}
 
     /*-------------------------- Fællesskål siden ------------------------------------*/
-    .laerke-pasta{top: 40%; left: -10%; width: 70%; z-index: 2}
-    .amalie-peber{top: -25%; left: 30%; width: 70%;}
+    .laerke-pasta{top: 30%; left: 5%; width: 30%; z-index: 2}
+    .amalie-peber{top: -55%; left: 20%; width: 25%;}
 
 
 
@@ -534,14 +538,6 @@ button {
         box-sizing: border-box;
     }
 
-
-        /* Fællesskål siden */
-    
-        .overlagt-billede{
-            position: absolute;
-            bottom: 50px; 
-            right: 200px;
-        }
 
 
   
