--- a/stylesheet.css
+++ b/stylesheet.css
@@ -58,9 +58,22 @@ a{
   font-size: 20px;
 }
 
+.alle-foraar a h3,
+.alle-sommer a h3,
+.alle-efteraar a h3,
+.alle-vinter a h3{
+  font-size: 20px;
+}
+
 /*---------------------Links hover-------------------*/
 
 
+.alle-foraar a h3:hover,
+.alle-sommer a h3:hover,
+.alle-efteraar a h3:hover,
+.alle-vinter a h3:hover{
+  color: var(--sekundær-blå);
+}
 
 #alle-foraar a h3:hover,
 #alle-sommer a h3:hover,
