--- a/stylesheet.css
+++ b/stylesheet.css
@@ -84,6 +84,9 @@ a{
 }
 
 #spring a:hover,
+#summer a:hover,
+#autumn a:hover,
+#winter a:hover,
 #alle-foraar a h3:hover,
 #alle-sommer a h3:hover,
 #alle-efteraar a h3:hover,
@@ -92,6 +95,9 @@ a{
 }
 
 #spring a img:hover,
+#summer a img:hover,
+#autumn a img:hover,
+#winter a img:hover,
 #alle-foraar a img:hover,
 #alle-sommer a img:hover,
 #alle-efteraar a img:hover,
