--- a/stylesheet.css
+++ b/stylesheet.css
@@ -318,9 +318,9 @@ footer{
 .foraarsbord{ top: 43%; left: 20%; width: 25%;}
 .asparges{ top: 73%; left: 16%; width: 15%; transform: rotate(-60deg);}
 .tomat{ top: 22%; left: 62%; width:10%; z-index: 2;}
-.foraarsmad{ top: 72%; left: 60%; width: 15%; z-index: 2;}
-.driver{ top: 43%; left: 73%; width: 20%;}
-.vin{ top: 5%; left: 65%; width: 25%;}
+.foraarsmad{ top: 73%; left: 63%; width: 15%; z-index: 2;}
+.driver{ top: 45%; left: 73%; width: 20%; transform: rotate(8deg)}
+.vin{ top: 5%; left: 65%; width: 25%; transform: rotate(3deg)}
 
 .tilmelding-boks{
     position: absolute;
@@ -667,10 +667,10 @@ button {
     }
   
     .kurv{ top: 0%; left: 20%; width: 35%;}
-    .foraarsbord{top: 75%; left: 10%; width: 37%; z-index: 4;}
+    .foraarsbord{top: 70%; left: 10%; width: 37%; z-index: 4; transform: rotate(-6deg);}
     .asparges{display: none;}
     .tomat{ top: 8%; left: 53%; width:17%; z-index: 2;}
-    .foraarsmad{ top: 70%; left: 37%; width: 40%; display: block;}
+    .foraarsmad{ top: 75%; left: 40%; width: 40%; display: block;}
     .driver{display: none;}
     .vin{top: 12%; left: 45%; width: 35%;}
     
