--- a/stylesheet.css
+++ b/stylesheet.css
@@ -111,7 +111,11 @@ a{
 #alle-foraar a h3:hover,
 #alle-sommer a h3:hover,
 #alle-efteraar a h3:hover,
-#alle-vinter a h3:hover{
+#alle-vinter a h3:hover,
+#alle-foraar a h2:hover,
+#alle-sommer a h2:hover,
+#alle-efteraar a h2:hover,
+#alle-vinter a h2:hover{
   color: var(--sekundær-blå);
 }
 
