--- a/stylesheet.css
+++ b/stylesheet.css
@@ -465,6 +465,10 @@ button {
   transform: rotate(4deg);
 }
 
+.hugo {
+  transform: rotate(4deg);
+}
+
 
 
 /*----------------------------KONTAKT----------------------------*/
