--- a/stylesheet.css
+++ b/stylesheet.css
@@ -465,8 +465,9 @@ button {
 .container-kontakt{ 
     background-color: var(--sekundær-orange);
     background-size: cover; 
-    background-position: center; 
-    height: 650px;
+    background-position: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .logo-hero{ top: 22%; left: 41%;}
@@ -476,14 +477,7 @@ button {
     height: auto; 
   }
   
-  .kontakt-tekst h2{
-    font-family:Fuzzy Bubbles;
-    font-size: 40px ;
-  }
-  
-  .kontakt-tekst p{
-      font-size: 20px;
-  }
+
   
 
   /* ---------FÆLLESSKÅL---------- */
@@ -600,15 +594,6 @@ button {
 
 
 
-/* -------------------KONTAKT--------------------------- */
-
-.container-kontakt{    
-    height: 400px;
-}
-
-.kontakt-tekst{
-    width: 170px;
-}
 
 
 
